--- a/src/app/features/commune/commune-avis/commune-avis-form.scss
+++ b/src/app/features/commune/commune-avis/commune-avis-form.scss
@@ -59,7 +59,7 @@
 }
 
 .form__msg--ok {
-  color: var(--good);
+  color: var(--good-text);
 }
 
 .form__msg--err {
